--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
 
@@ -7,7 +7,7 @@
 <div class="grid-container-picture">
     <div class="textIndex">
         <div class="textIndexContent">
-            Zbuduj swoją przyszłość z <span class="textIndexContentColor">energią odnawialną<span class="textIndexDot">.</span>
+            Zacznij zarabiać już dziś  <span class="textIndexContentColor">z fotowoltaiką<span class="textIndexDot">.</span>
             </span>
         </div>
         <div class="textAboutIndex">
@@ -23,8 +23,10 @@
             <img class="responsiveImgIndex" src="{% static 'images/backgroundImg.png'  %}">
         </div>
     </div>
-    
 </div>
+
+
+
 <div class="checking">
 
 </div>
