--- a/core/templates/nav.html
+++ b/core/templates/nav.html
@@ -3,7 +3,7 @@
     <a class="logo" href="/"><img src="{% static '/images/Black-on-Transparent.png'  %}" class="logoImg"alt="logo"></a>
     <nav>
         <ul class="nav__links">
-            <li><a href="#">Jak działamy</a></li>
+            <li><a href="#">O nas</a></li>
             <li><a href="#">Realizacje</a></li>
             <li><a href="#">Kalkulator</a></li>
         </ul>
@@ -14,7 +14,7 @@
 <div class="overlay">
     <a class="close">&times;</a>
     <div class="overlay__content">
-        <a href="#">Jak działamy</a>
+        <a href="#">O nas</a>
         <a href="#">Realizacje</a>
         <a href="#">Kalkulator</a>
     </div>
