--- a/core/templates/howWeWork.html
+++ b/core/templates/howWeWork.html
@@ -1,30 +1,83 @@
+
+
 <div class="grid-container-work">
-    <div class="colTextHow">dd</div>
-    <div class="colColsHow">
-      <div class="col1">
-        <div class="colBox1">
-          <div class="iconBox1">
-            <i class="fas fa-plug"></i>
-          </div>
-        </div>
-      </div>
-      <div class="col2">
-        <div class="colBox2">
-          <div class="iconBox2-1">
-            <i class="fas fa-comment-dollar"></i>
-          </div>
-  
-        </div>
-      </div>
-      <div class="col3">
-        <div class="colBox1">
+  <div class="colTextHow">
+    <div class="textHowContainer">
+      <div class="titleTextHow">
+        <span class="textIndexContentColor">Dobry plan to <span class="textIndexDot">dla nas podstawa.</span>
+      </span>
 
-        </div>
       </div>
-      <div class="col4">
-        <div class="colBox2">
-
+      <div class="fillerContentHow">
+        Kluczowymi aspektami podczas pracy z klientem jest dla nas transparentość i przejrzysty plan działania
+        by umożliwić państwu zmianę z dotychczasowego źródła energii na energię odnawialną . 
+      </div> 
+    </div>
+  </div>
+  <div class="colColsHow">
+    <div class="col1">
+      <div class="colBox1">
+        <div class="iconBox1">
+          <i class="fas fa-plug"></i>
+        </div>
+        <div class="boxText colorBox1">
+          audyt energetyczny
+        </div>
+        <div class="textBox">
+          Na wstępie Nasi pracownicy zbierają od Państwa wszystkie informacje potrzebne do opracowania instalacji.
+        </div>
+        <div class="numbersBox colorBox1">
+          01/04
         </div>
       </div>
     </div>
+    <div class="col2">
+      <div class="colBox2">
+        <div class="iconBox2">
+          <i class="fas fa-comment-dollar"></i>
+        </div>
+        <div class="boxText colorBox2">
+          formy finansowania 
+        </div>
+        <div class="textBox">
+          Przed zawarciem umowy możemy zaoferować Państwu korzystne formy finansowania m.in kredyt lub leasing.
+        </div>
+        <div class="numbersBox colorBox2">
+          02/04
+        </div>
+      </div>
+    </div>
+    <div class="col3">
+      <div class="colBox3">
+        <div class="iconBox3">
+          <i class="fas fa-truck"></i>
+        </div>
+        <div class="boxText colorBox3">
+          przygotowania do montażu 
+        </div>
+        <div class="textBox">
+          Na tym etapie Nasi technicy kontaktują się z Państwem, aby umówić się na termin wykonanie instalacji.
+        </div>
+        <div class="numbersBox colorBox3">
+          03/04
+        </div>
+      </div>
+    </div>
+    <div class="col4">
+      <div class="colBox4">
+        <div class="iconBox4">
+          <i class="fas fa-solar-panel"></i>
+        </div>
+        <div class="boxText colorBox4">
+          po montażu
+        </div>
+        <div class="textBox">
+          Po zrealizowaniu instalacji pomagamy wysłać wszystkie niezbędne dokumenty do sprzedawcy prądu.
+        </div>
+        <div class="numbersBox colorBox4">
+          04/04
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
