--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -14,7 +14,7 @@
             Oszczędzaj na rachunkach za prąd i zyskaj dzięki panelom fotowoltaicznym. Skorzystaj z naszego kalkulatora by sprawdzić opłacalność inwestycji. 
         </div>
         <div class="buttonIndex">
-            <button class="draw meet">Oblicz</button>
+            <button >Oblicz</button>
         </div>
         
     </div>
@@ -30,5 +30,7 @@
 <div class="checking">
 
 </div>
-
+{% include 'calc.html'  %} 
+{% include 'howWeWork.html'  %} 
+{% include 'gallery.html'  %}
 {% endblock %}
