--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="{% static '/css/work.css'  %}">
   <link rel="stylesheet" href="{% static '/css/nav.css'  %}">
   <link rel="stylesheet" href="{% static '/css/test.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/calcGrid.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/calc.css'  %}">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -29,8 +31,7 @@
 
 
     {% endblock  %}
-  {% include 'howWeWork.html'  %} 
-  {% include 'gallery.html'  %} 
+ 
   {% include 'footer.html'  %} 
     <script src="{% static '/js/jquery.min.js'  %}"></script>
     <script src="{% static '/js/main.js'  %}"></script>
