--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="{% static '/css/test.css'  %}">
   <link rel="stylesheet" href="{% static '/css/calcGrid.css'  %}">
   <link rel="stylesheet" href="{% static '/css/calc.css'  %}">
+  <link rel="stylesheet" href="{% static '/css/gallery.css'  %}">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
