--- a/core/static/css/calc.css
+++ b/core/static/css/calc.css
@@ -86,7 +86,7 @@
     border-bottom: 2px solid #9b9b9b;
     outline: 0;
     font-size: 1.3rem;
-    color: #fff;
+    color: black;
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
