--- a/core/static/css/indexGrid.css
+++ b/core/static/css/indexGrid.css
@@ -51,4 +51,23 @@
     
     .backgroundImgIndex { grid-area: backgroundImgIndex; }
   }
-  
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-border-radius: 100px
+}
+
+::-webkit-scrollbar:hover {
+    background-color: rgba(0, 0, 0, .09)
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, .5);
+    -webkit-border-radius: 100px
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: rgba(0, 0, 0, .61);
+    -webkit-border-radius: 100px
+}
