--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -13,7 +13,7 @@
 </div>
 
 
-  <div class="grid-container-footer">
+  <div class="grid-container-footer" id='contact'>
     <div class="time">
       <div class="timeWrapperFooter">
         <div class="timePosFooter">
@@ -39,7 +39,7 @@
     </div>
     <div class="terms">
       <div class="wrapperTermsFooter">
-        <a href="#" class="termsLinkFooter">warunki i zasady</a>
+        <!--<a href="#" class="termsLinkFooter">warunki i zasady</a>-->
       </div>
     </div>
     <div class="phone">
@@ -57,7 +57,7 @@
     </div>
     <div class="faq">
       <div class="faqTermsFooter">
-        <a href="#" class="faqLinkFooter">Często zadawane pytania</a>
+       <!--- <a href="#" class="faqLinkFooter">Często zadawane pytania</a>-->
       </div>
     </div>
     <div class="office"><!--Same classes as time-->
