--- a/core/templates/howWeWork.html
+++ b/core/templates/howWeWork.html
@@ -1,6 +1,6 @@
 
 
-<div class="grid-container-work">
+<div class="grid-container-work" id='aboutUs'>
   <div class="colTextHow">
     <div class="textHowContainer">
       <div class="titleTextHow">
