--- a/core/static/css/nav.css
+++ b/core/static/css/nav.css
@@ -14,13 +14,18 @@ button {
     border-radius: 25px;
   }
   button::before, button::after {
-    box-sizing: inherit;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    outline: none;
+    border: none;
   }
-  
+  button:active {
+    outline: none;
+    border: none;
+    }
+    
+  button:focus {
+    outline: none;
+    border: none;
+  }
  
 
   @media (max-width: 762px) {
