--- a/core/templates/calc.html
+++ b/core/templates/calc.html
@@ -1,20 +1,20 @@
-<div class="grid-container-calc">
+<div class="grid-container-calc" id="calc">
     <div class="titleCalc">
         <div class="containerTitleCalc">
                 
-            Oblicz swoją <span class="textIndexContentColor">inwestycje <span class="textIndexDot">.</span>
+            Oblicz swoją <span class="textIndexContentColor">inwestycje<span class="textIndexDot">.</span>
 
         </div>
     </div>
     <div class="calcOption">
         <div class="calcInfo">
-            By obliczyć potrzebne metry kwadratowe, ilość paneli oraz zapotzebowanie energetyczne wybierz
+            By obliczyć potrzebne metry kwadratowe na instalacjie paneli oraz ich ilość wybierz jeden z przedziałów który to reprezentuje twoje<span class="textIndexDot">średnie roczne</span> opłaty za prąd.
         </div>
         <form method="POST" action="{% url 'data'  %}">
             {% csrf_token  %}
             <div class="calcSelect">
                 <select name="powerPrice" id="powerPrice" class="selectControl" required >
-                    <option value="">wybierz roczną średnią</option>
+                    <option value="">wybierz średnią roczną</option>
                     {% for x in selectPrice  %}
                     <option value="{{  x.id  }}">{{ x.price  }}</option>
                     {% endfor  %}
@@ -57,6 +57,15 @@
                                                         {{ form.email  }}
                                                         <label for="email" class="form__label">Email</label>
                                                     </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="agreement">
+                                                    Wypełnienie i przesłanie formularza oznacza wyrażenie zgody na przetwarzanie przez WW energy podanych w formularzu danych osobowych w celu udzielenia pomocy bądź informacji dotyczących usług świadczonych przez firme WW energy.
                                                 </div>
                                             </div>
                                         </div>
