--- a/core/templates/gallery.html
+++ b/core/templates/gallery.html
@@ -1,4 +1,4 @@
-<div class="container galleryPos">
+<div class="container galleryPos" id='gallery'>
     <div class="row">
         <div class="col-2">
 
