--- a/core/templates/nav.html
+++ b/core/templates/nav.html
@@ -3,19 +3,19 @@
     <a class="logo" href="/"><img src="{% static '/images/Black-on-Transparent.png'  %}" class="logoImg"alt="logo"></a>
     <nav>
         <ul class="nav__links">
-            <li><a href="#">O nas</a></li>
-            <li><a href="#">Realizacje</a></li>
-            <li><a href="#">Kalkulator</a></li>
+            <li><a href="#aboutUs">O nas</a></li>
+            <li><a href="#gallery">Realizacje</a></li>
+            <li><a href="#calc">Kalkulator</a></li>
         </ul>
     </nav>
-    <a class="cta" href="#">Kontakt</a>
+    <a class="cta" href="#contact">Kontakt</a>
     <p class="menu cta">Menu</p>
 </header>
 <div class="overlay">
     <a class="close">&times;</a>
     <div class="overlay__content">
-        <a href="#">O nas</a>
-        <a href="#">Realizacje</a>
-        <a href="#">Kalkulator</a>
+        <a href="#aboutUs">O nas</a>
+        <a href="#gallery">Realizacje</a>
+        <a href="#calc">Kalkulator</a>
     </div>
 </div>
