custom admin panel

--- a/core/templates/generated.html
+++ b/core/templates/generated.html
@@ -47,7 +47,7 @@
               <div class="row">
                 <div class="col-12">
                     <div class="textContent">
-                        Powierzchnia potrzebna do montażu paneli fotowoltaicznych: <span class="generatedText">{{ data.paneleM2  }} m2</span>
+                        Powierzchnia potrzebna do montażu paneli fotowoltaicznych: <span class="generatedText">{{ data.panele_m2  }} m2</span>
                     </div>
                     
                 </div>
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="textContent">
-                        Ilość paneli fotowoltaicznych:<span class="generatedText">{{ data.sztukiPaneli  }} sztuk</span>
+                        Ilość paneli fotowoltaicznych:<span class="generatedText">{{ data.sztuki_paneli  }} sztuk</span>
                     </div>
                 </div>
             </div>
