--- a/core/templates/gallery.html
+++ b/core/templates/gallery.html
@@ -17,10 +17,10 @@
     <div class="row no-gutters ">
         {% for x in latest_pics  %}
             <div class="col-sm-12 col-md-12 col-lg-4 align-self-center">
-                <div class="tileGallery" style="background-image: url('{{ x.picPlace.url  }}');">
+                <div class="tileGallery" style="background-image: url('{{ x.pic_place.url  }}');">
                     <div class="boxWhere">
                         <div class="titleWhere">
-                            {{ x.place  }} {{ x.kwPlace  }}kW
+                            {{ x.place  }} {{ x.kw_place  }}kW
                         </div>
                     </div>
                 </div>
